fix: fixed spacing for cards without icons

--- a/views/src/components/HomePageCard/HomePageCard.css
+++ b/views/src/components/HomePageCard/HomePageCard.css
@@ -16,7 +16,6 @@
 .card img {
     width: 75px;
     height: 75px;
-    margin-right: 10px;
     margin-left: 10px;
     z-index: 1;
 }
@@ -30,6 +29,7 @@
 .card-text h3 {
     margin-top: 0px;
     margin-bottom: 10px;
+    margin-left: 25px;
     font-size: 24px;
     font-weight: bolder;
 }
@@ -38,6 +38,7 @@
     font-size: 16px;
     font-weight: bolder;
     max-height: 100px;
+    margin-left: 25px;
     margin-bottom: 0px;
 }
 
